Fixbug: #213996. Word-wrap propery (CSS) and max-width on table in case of excessive content length

--- a/Resources/public/css/solerni.css
+++ b/Resources/public/css/solerni.css
@@ -2807,3 +2807,8 @@ body.subnavbar-fixed.displayCookieWarning {
     margin-right:   .5em;
     padding:        3px 6px;
 }
+
+.slrn-list-group-item {
+    overfow:    hidden;
+    word-wrap:  break-word;
+}
